# SW-Lab-Manager

./: .gitignore  README.md  SW-Lab-Manager.tar  app.py  issues.txt  migrate_database.py  migrate_to_files.py  requirements.txt  run.py  sample_data.py  setup.cfg  simple_test.py  test_login.py
.github/workflows/: python-publish.yml
data/: devices.json  labs.json  stations.json  users.json
instance/: sw_labs.db
static/css/: style.css
static/js/: app.js
templates/: add_device.html  add_lab.html  add_station.html  add_user.html  admin_panel.html  base.html  edit_device.html  edit_lab.html  edit_station.html  edit_user.html  index.html  lab_detail.html  login.html  occupy_station.html  station_detail.html
