[metadata]
name = "SW-Lab-Manager"
version = "0.0.1"
author = "your_name"
author_email = "your_email@example.com"
description = "A simple lab management system."
long_description = file: README.md
long_description_content_type = "text/markdown"
url = "https://github.com/your_username/your_repository"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[options]
packages = find:
python_requires = >=3.6
